--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         <div class="card mb-5 border-danger bg-transparent shadow-lg hidden_element">
           <h5 class="card-header border-danger text-center">Full Stack Development Experience:</h5>
           <div class="card-body text-center">
-            <img src="images/python.png" alt="pythonlogo" class="m-3 tech_logos">
             <img src="images/sqllogo.png" alt="sqllogo" class="m-3 tech_logos">
+            <img src="images/python.png" alt="pythonlogo" class="m-3 tech_logos">
             <img src="images/javascriptlogo.png" alt="jslogo" class="m-3 tech_logos">
             <img src="images/msexcel.png" alt="excellogo" class="m-3 tech_logos">
             <img src="images/powerbi.png" alt="powerbilogo" class="m-3 tech_logos">
@@ -166,7 +166,7 @@
             <img src="images/csslogo.png" alt="csslogo" class="m-3 tech_logos">
             <img src="images/HTMLLogo.png" alt="htmllogo" class="m-3 tech_logos">
             <hr>
-            <p class="card-text text-muted">Python, SQL, JavaScript, MSExcel, PowerBI, Numpy, CSS, HTML</p>
+            <p class="card-text text-muted">SQL, Python, JavaScript, MSExcel, PowerBI, Numpy, CSS, HTML</p>
           </div>
           <div class="card-footer border-danger justify-content-center">
             <a href="#portfolio_section" class="btn btn-outline-danger d-block text-uppercase py-2 my-1" id="view_projects_button">View Projects</a>
