--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <img src="images/PortfolioPic.jpg" alt="image_of_self" class="shadow-lg p-1 mb-4 bg-dark rounded" id="profile_pic">
             <h4 class="font-weight-bold my-3 hidden_element">Who am I?</h4>
             <hr class="d-block mx-auto m-0 mb-4 hidden_element hr_stylings">
-            <p class="text-muted mb-0 hidden_element"> I'm a junior-level full-stack developer, data analyst, and database designer currently based in the greater Pittsburgh area.</p>
-            <p class="text-muted mb-2 hidden_element">I have a passion for using my creative talents and problem-solving abilities to improve the lives of others through programming.</p>
+            <p class="text-muted mb-0 hidden_element"> I'm a junior-level data analyst currently based in the Pittsburgh area.</p>
+            <p class="text-muted mb-2 hidden_element">I have a passion for using my creative talents and problem-solving abilities to improve the lives of others through code and reporting.</p>
             <a href="#contact_section" class="btn btn-outline-danger text-uppercase py-2 px-4 mt-4 hidden_element" id="lets_connect_button">Let's Connect!</a>
           </div>
           <div class="col-lg-6 pl-lg-5">
@@ -101,7 +101,7 @@
                   <div class="col-9 text-right">
                     <h4 class="card-title text-uppercase text-dark">Versatile</h4>
                     <hr class="about_card_hrs">
-                    <p class="text-muted">I have experience in full stack development, data analysis, and database design.</p>
+                    <p class="text-muted">I'm an experienced data analyst who can write code in Python, SQL, Java, and JavaScript.</p>
                   </div>
                 </div>
               </div>
@@ -115,7 +115,21 @@
                   <div class="col-9 text-right">
                     <h4 class="card-title text-uppercase">Scalable</h4>
                     <hr class="about_card_hrs">
-                    <p class="text-muted">I build applications with clean, efficient, production-ready code that's easily scalable. </p>
+                    <p class="text-muted">I write clean, efficient, production-ready code that's easy to interpret and build upon.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card border-danger mb-3 mt-4 bg-transparent shadow-lg hidden_element">
+              <div class="card-body">
+                <div class="row align-items-center">
+                  <div class="col-3 text-center">
+                    <i class="fas fa-shower fa-5x text-danger mb-2"></i>
+                  </div>
+                  <div class="col-9 text-right">
+                    <h4 class="card-title text-uppercase">Flexible</h4>
+                    <hr class="about_card_hrs">
+                    <p class="text-muted">I'm experienced in all aspects of the data analysis process, from cleaning to reporting.</p>
                   </div>
                 </div>
               </div>
@@ -127,23 +141,9 @@
                     <i class="fas fa-lightbulb fa-5x text-danger mb-2"></i>
                   </div>
                   <div class="col-9 text-right">
-                    <h4 class="card-title text-uppercase">Logical</h4>
+                    <h4 class="card-title text-uppercase">Engaged</h4>
                     <hr class="about_card_hrs">
-                    <p class="text-muted">Intuitive design on both the front and back end of an application is essential to my process.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card border-danger mb-3 mt-4 bg-transparent shadow-lg hidden_element">
-              <div class="card-body">
-                <div class="row align-items-center">
-                  <div class="col-3 text-center">
-                    <i class="fas fa-tablet-alt fa-5x text-danger mb-2"></i>
-                  </div>
-                  <div class="col-9 text-right">
-                    <h4 class="card-title text-uppercase">Responsive</h4>
-                    <hr class="about_card_hrs">
-                    <p class="text-muted">My apps look good on a variety of devices - including phones, tablets, and computers.</p>
+                    <p class="text-muted">I'm passionate about what I do, so I work hard and learn new subjects quickly.</p>
                   </div>
                 </div>
               </div>
@@ -155,19 +155,18 @@
       <!-- Lower About Section -->
       <div class="row justify-content-center mb-5 px-4 px-md-0">
         <div class="card mb-5 border-danger bg-transparent shadow-lg hidden_element">
-          <h5 class="card-header border-danger text-center">Full Stack Development Experience:</h5>
+          <h5 class="card-header border-danger text-center">Languages and Frameworks:</h5>
           <div class="card-body text-center">
-            <img src="images/python.png" alt="pythonlogo" class="m-3 tech_logos">
-            <img src="images/sqllogo.png" alt="sqllogo" class="m-3 tech_logos">
-            <img src="images/javascriptlogo.png" alt="jslogo" class="m-3 tech_logos">
-            <img src="images/pandas.png" alt="pandaslogo" class="m-3 tech_logos">
-            <img src="images/msexcel.png" alt="excellogo" class="m-3 tech_logos">
-            <img src="images/powerbi.png" alt="powerbilogo" class="m-3 tech_logos">
-            <img src="images/numpy.svg" alt="numpylogo" class="m-3 tech_logos">
-            <img src="images/csslogo.png" alt="csslogo" class="m-3 tech_logos">
-            <img src="images/HTMLLogo.png" alt="htmllogo" class="m-3 tech_logos">
+            <img src="images/python.png" alt="pythonlogo" class="m-4 tech_logos">
+            <img src="images/sqllogo.png" alt="sqllogo" class="m-4 tech_logos">
+            <img src="images/java.png" alt="javalogo" class="my-4 mx-0 smaller_logos">
+            <img src="images/javascriptlogo.png" alt="jslogo" class="m-4 tech_logos">
+            <img src="images/pandas.png" alt="pandaslogo" class="m-4 tech_logos">
+            <img src="images/msexcel.png" alt="excellogo" class="m-4 tech_logos">
+            <img src="images/powerbi.png" alt="powerbilogo" class="m-4 tech_logos">
+            <img src="images/numpy.svg" alt="numpylogo" class="m-4 tech_logos">
             <hr>
-            <p class="card-text text-muted">Python, SQL, JavaScript, Pandas, MSExcel, PowerBI, Numpy, CSS, HTML</p>
+            <p class="card-text text-muted">Python - SQL - Java - JavaScript - Pandas - MSExcel - PowerBI - Numpy</p>
           </div>
           <div class="card-footer border-danger justify-content-center">
             <a href="#portfolio_section" class="btn btn-outline-danger d-block text-uppercase py-2 my-1" id="view_projects_button">View Projects</a>
