--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <i class="fas fa-code-branch fa-5x text-danger mb-2" id="about_logos"></i>
                   </div>
                   <div class="col-9 text-right">
-                    <h4 class="card-title text-uppercase text-dark">Versatile</h4>
+                    <h4 class="card-title text-uppercase text-dark">Adaptable</h4>
                     <hr class="about_card_hrs">
                     <p class="text-muted">I'm an experienced data analyst who can write code in Python, SQL, Java, and JavaScript.</p>
                   </div>
@@ -127,7 +127,7 @@
                     <i class="fas fa-shower fa-5x text-danger mb-2"></i>
                   </div>
                   <div class="col-9 text-right">
-                    <h4 class="card-title text-uppercase">Flexible</h4>
+                    <h4 class="card-title text-uppercase">Versatile</h4>
                     <hr class="about_card_hrs">
                     <p class="text-muted">I'm experienced in all aspects of the data analysis process, from cleaning to reporting.</p>
                   </div>
