--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                   <div class="col-9 text-right">
                     <h4 class="card-title text-uppercase">Engaged</h4>
                     <hr class="about_card_hrs">
-                    <p class="text-muted">I'm passionate about what I do, so I work hard and learn new subjects quickly.</p>
+                    <p class="text-muted">I'm passionate about what I do - I work hard and pick up new subjects very quickly.</p>
                   </div>
                 </div>
               </div>
