--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                   <div class="card-body">
                     <h4 class="card-title text-uppercase text-white">Standard Records</h4>
                     <hr class="project_hrs">
-                    <p class="card-text text-white">E-Commerce site for buying specialty vinyl products, including a product database for owner inventory management.</p>
+                    <p class="card-text text-white">E-Commerce site for buying specialty vinyl products, including a complex SQLite database to store product data, customer information, and payment information.</p>
                     <p class="card-text text-white d-lg-none d-xl-block">Built using Python, Django, Bootstrap, jQuery, HTML, CSS and GitHub.</p>
                     <a href="https://github.com/October2020PandA/BenShermanSoloProject" target="_blank"><i class="fab fa-github-square fa-3x text-danger"></i></a>
                   </div>
