added new project

--- a/index.html
+++ b/index.html
@@ -211,14 +211,30 @@
                   <div class="card-body">
                     <h4 class="card-title text-uppercase text-white">Standard Records</h4>
                     <hr class="project_hrs">
-                    <p class="card-text text-white">E-Commerce site for buying specialty vinyl products, including a complex SQLite database to store product data, customer information, and payment information.</p>
+                    <p class="card-text text-white">E-Commerce site for buying specialty vinyl products, including a SQLite database to store product data, customer information, and payment information.</p>
                     <p class="card-text text-white d-lg-none d-xl-block">Built using Python, Django, Bootstrap, jQuery, HTML, CSS and GitHub.</p>
                     <a href="https://github.com/October2020PandA/BenShermanSoloProject" target="_blank"><i class="fab fa-github-square fa-3x text-danger"></i></a>
                   </div>
                 </div>
               </div>
             </div>
-            
+            <!-- Demographic Analysis Project -->
+            <div class="card border-danger bg-transparent shadow-lg mt-3 project_display grid-item Python">
+              <div class="row no-gutters">
+                <div class="col-lg-6">
+                  <img src="images/CityComparisonSpreadsheet.png" class="card-img" alt="Standard Records Project">
+                </div>
+                <div class="col-lg-6">
+                  <div class="card-body">
+                    <h4 class="card-title text-uppercase text-white">Demographic Analysis by City</h4>
+                    <hr class="project_hrs">
+                    <p class="card-text text-white">Demographic analysis of different U.S. cities by population, income, and ratio of a particular race's income in comparison to the average.</p>
+                    <p class="card-text text-white d-lg-none d-xl-block">Built using Python, Pandas, Numpy, Excel and with data from <a href="https://data.census.gov/cedsci/">data.census.gov</a></p>
+                    <a href="https://github.com/October2020PandA/BenShermanSoloProject" target="_blank"><i class="fab fa-github-square fa-3x text-danger"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
