--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h4 class="font-weight-bold my-3 hidden_element">Who am I?</h4>
             <hr class="d-block mx-auto m-0 mb-4 hidden_element hr_stylings">
             <p class="text-muted mb-0 hidden_element"> I'm a junior-level data analyst currently based in the Pittsburgh area.</p>
-            <p class="text-muted mb-2 hidden_element">I have a passion for using my creative talents and problem-solving abilities to improve the lives of others through code and reporting.</p>
+            <p class="text-muted mb-2 hidden_element">I have a passion for using my creative talents and problem-solving abilities to improve the lives of others through analysis and reporting.</p>
             <a href="#contact_section" class="btn btn-outline-danger text-uppercase py-2 px-4 mt-4 hidden_element" id="lets_connect_button">Let's Connect!</a>
           </div>
           <div class="col-lg-6 pl-lg-5">
@@ -229,7 +229,7 @@
                     <h4 class="card-title text-uppercase text-white">Demographic Analysis by City</h4>
                     <hr class="project_hrs">
                     <p class="card-text text-white">Demographic analysis of different U.S. cities by population, income, and ratio of a particular race's income in comparison to the average.</p>
-                    <p class="card-text text-white d-lg-none d-xl-block">Built using Python, Pandas, Numpy, Excel and with data from <a href="https://data.census.gov/cedsci/">data.census.gov</a></p>
+                    <p class="card-text text-white d-lg-none d-xl-block">Built using Python, Pandas, Numpy, Excel and data from <a href="https://data.census.gov/cedsci/">data.census.gov</a></p>
                     <a href="https://github.com/October2020PandA/BenShermanSoloProject" target="_blank"><i class="fab fa-github-square fa-3x text-danger"></i></a>
                   </div>
                 </div>
