--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h4 class="font-weight-bold my-3 hidden_element">Who am I?</h4>
             <hr class="d-block mx-auto m-0 mb-4 hidden_element hr_stylings">
             <p class="text-muted mb-0 hidden_element"> I'm a junior-level data analyst currently based in the Pittsburgh area.</p>
-            <p class="text-muted mb-2 hidden_element">I have a passion for using my creative talents and problem-solving abilities to improve the lives of others through analysis and reporting.</p>
+            <p class="text-muted mb-2 hidden_element">I have a passion for using my creative talents and problem-solving abilities to improve the lives of others through analysis.</p>
             <a href="#contact_section" class="btn btn-outline-danger text-uppercase py-2 px-4 mt-4 hidden_element" id="lets_connect_button">Let's Connect!</a>
           </div>
           <div class="col-lg-6 pl-lg-5">
